# MCPKerykeion

./: .gitignore  MANIFEST.in  README.md  build.py  china_cities.json  example.py  kerykeion_mcp.py  kerykeion_mcp_config.json  pyproject.toml
cache/: kerykeion_geonames_cache.sqlite
src/kerykeion_mcp/: __init__.py  china_cities.json  core.py  server.py
tests/: test_basic.py
